# vex

./: .gitignore  CITATION.cff  Cargo.toml  README.md
.github/workflows/: tests.yml
benches/: search.rs
examples/: basic.rs  hnsw_vs_flat.rs
src/: distance.rs  error.rs  lib.rs  server.rs  storage.rs
src/index/: flat.rs  hnsw.rs  mod.rs
tests/: http_api.rs  integration.rs
