[package]
name = "vex"
version = "0.1.0"
edition = "2021"
description = "A vector database from scratch in Rust with HNSW indexing and an interactive web visualizer."
license = "MIT"
repository = "https://github.com/manavmishra-cloud/vex"
authors = ["Manav Mishra <manavmishra260205@gmail.com>"]
readme = "README.md"
keywords = ["vector-database", "hnsw", "ann", "embeddings", "nearest-neighbor"]
categories = ["data-structures", "database-implementations"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[[bench]]
name = "search"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
