[package]
name = "vex"
version = "0.3.0"
edition = "2021"
description = "A vector database from scratch in Rust with HNSW indexing and an HTTP REST API."
license = "MIT"
repository = "https://github.com/manavmishra-cloud/vex"
authors = ["Manav Mishra <manavmishra260205@gmail.com>"]
readme = "README.md"
keywords = ["vector-database", "hnsw", "ann", "embeddings", "nearest-neighbor"]
categories = ["data-structures", "database-implementations"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3.10"

[[bin]]
name = "vex-server"
path = "src/bin/server.rs"

[[bench]]
name = "search"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
